@@ -1,3 +1,11 @@
+2007-02-21  Remi Humbert  <humbert@gostai.com>
+
+	Fix semaphore: sem_wait interrupted by signal must be restarted
+	* semaphore.hxx: in operator-- (int) and operator-- put the sem_wait
+	call in a do while loop to restart the call when it is interrupted by
+	a signal. If this is not done the assert on the sem_wait return fail
+	whenever a signal that stop the sem_wait is received.
+
 2007-02-20  Akim Demaille  <demaille@gostai.com>
 
 	find0
